# Idio-rs

./: Cargo.toml
src/: lib.rs
src/core/: app.rs  logger.rs  mod.rs  platform.rs  window.rs
src/gfx/: context.rs  mod.rs
