[package]
name = "idio"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
[profile.release]
strip = "debuginfo"

[[bin]]
name = "example_app"

[dependencies]
dirs = "4.0.0"
winit = "0.26.1"
dialog = "0.3.0"
colored = "2.0.0"
vulkanalia = { version =  "0.15.0", features = ["libloading", "window"] }

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3.9"
features = ["consoleapi", "errhandlingapi", "fileapi", "handleapi", "processenv"]
